# RockProbeMaster

./: .gitignore  CMakeLists.txt  RockProbeMaster.qrc  d  databaseconnector.cpp  databaseconnector.h  databaseinsertpage.cpp  databaseinsertpage.h  databaseinsertpage.ui  detectormanagersingleton.cpp  detectormanagersingleton.h  detectorsizesettings.cpp  detectorsizesettings.h  detectorsizesettings.ui  dialog11.cpp  dialog11.h  dialog11.ui  excelchooseworkspace.cpp  excelchooseworkspace.h  excelchooseworkspace.ui  excelexporter.cpp  excelexporter.h  excelimporter.cpp  excelimporter.h  excelreaderanddisplayer.cpp  excelreaderanddisplayer.h  excelreaderanddisplayer.ui  form.cpp  form.ui  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowmainpage.cpp  mainwindowonlydetect.cpp  mainwindowslots.cpp  qtcsettings.cmake  (+21 more)
RockProbeMaster_autogen/: mocs_compilation.cpp
RockProbeMaster_autogen/EWIEGA46WW/: qrc_RockProbeMaster.cpp
RockProbeMaster_autogen/include/: ui_databaseinsertpage.h  ui_excelreaderanddisplayer.h  ui_form.h  ui_loginwidget.h  ui_mainwindow.h  ui_registerwidget.h  ui_videoinfoopt.h  ui_videoreviewwidget.h  ui_workspacefilemanager.h  ui_workspaceopener.h
